<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KSTU App.</string>
    <string name="exampleTextView_text">hello, world!</string>
    <!--<string name="app_logo_text">KSTU App.</string>-->

    <string name="main_menu_button_schedule">Schedule</string>
    <string name="main_menu_button_navigator">Navigator</string>
    <string name="main_menu_button_university">University</string>
    <string name="main_menu_button_profile">Profile</string>

    <string name="main_toolbar_description_schedule">Schedule</string>
    <string name="main_toolbar_description_navigator">Navigator</string>
    <string name="main_toolbar_description_university">University KSTU</string>
    <string name="main_toolbar_description_profile">Profile</string>

    <string name="tv_welcome_text">Welcome to the KSTU mobile app!</string>
    <string name="tv_app_version_text">Application version:</string>
    <string name="kgtuapp_telegram_link">\@kgtuapp</string>
    <string name="kgtuapp_telegram_word">telegram:</string>
    <string name="not_done_yet_description_text">This section is under development. If you have any suggestions or complaints about the application, then write to us at</string>
    <string name="not_done_yet_text_title">Not done yet...</string>
    <string name="tv_profileUserNameSurname">Счастнев Никита ауф</string>
    <string name="tv_profileSettingsText">Application</string>
    <string name="b_changeLanguageString">Change application language</string>
    <string name="profile_settings_choose_language_alert_title">Language selection</string>
    <string name="profile_settings_choose_language_alert_close">Close</string>
    <string name="profile_settings_choose_language_alert_accept">Accept</string>
    <string name="group_not_chosen">Study group not selected</string>
    <string name="schedule_will_appear">The schedule will appear here after you select your group</string>
    <string name="choose_group">Select a group</string>
    <string name="no_such_group">There is no such group</string>
    <string name="no_errors_name_group">Check if there are any errors in the spelling of the group. If everything is indicated correctly, then write to @kgtuapp in telegram, we will help and figure it out.</string>
    <string name="internet_connection_is_required">To download your group\'s schedule, you need an internet connection</string>
    <string name="no_internet">There is no Internet connection</string>
    <string name="ti_searchgrouptext">Поиск группы</string>

    <!--Раздел профиля-->
    <string name="tv_scheduleUserStatusTitleText">Статус:</string>
    <string name="tv_scheduleUserGradebookTitleText">Зачетная книга:</string>
    <string name="tv_scheduleUserInstituteTitleText">Институт:</string>
    <string name="tv_scheduleUserStudyGroupTitleText">Учебная группа:</string>
    <string name="tv_scheduleUserStudySubgroupTitleText">Подгруппа:</string>
    <string name="tv_scheduleUserStudyEmailTitleText">Почта:</string>
    <string name="b_profileAcademicPerformanceText">Успеваемость</string>
    <string name="b_profileCheckDebtText">Узнать задолженности</string>
    <string name="b_profileCurriculumText">Учебный план</string>
    <string name="b_profileSettingsText">Настройки</string>
    <string name="b_profileAboutProjectText">О проекте</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="autorization_et_login">Логин</string>
    <string name="autorization_et_password">Пароль</string>
    <string name="autorization_b_registration">Регистрация</string>
    <string name="autorization_b_dont_remember_password">Я не помню пароль</string>
    <string name="autorization_b_enter_to_app">Войти в приложение</string>
    <string name="autorization_enter_as_guest">Войти как гость</string>
    <string name="registration_b_authorization">Вход</string>
    <string name="registration_tv_registration_info">Для использования всех функций приложения укажите свой статус в КГТУ</string>
    <string name="registration_b_im_student">Я студент</string>
    <string name="registration_b_im_teacher">Я преподаватель</string>
    <string name="registration_b_continue_registration">Продолжить</string>
    <string name="registration_b_enterAsGuest">Войти как гость</string>

    <!--Настройки для шрифтов material design-->
    <!--<string name="m3_sys_typescale_body_large_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_body_medium_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_body_small_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_display_large_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_display_medium_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_display_small_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_headline_large_font" translatable="false">manrope</string>
    <string name="m3_sys_typescale_headline_medium_font" translatable="false" tools:ignore="PrivateResource">manrope-bold</string>
    <string name="m3_sys_typescale_headline_small_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_label_large_font" translatable="false">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_medium_font" translatable="false">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_small_font" translatable="false">sans-serif-medium</string>
    <string name="m3_sys_typescale_title_large_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_title_medium_font" translatable="false">sans-serif-medium</string>
    <string name="m3_sys_typescale_title_small_font" translatable="false">sans-serif-medium</string>-->

    <!--Раздел университета-->
    <string name="site_KGTU">Web site KSTU</string>
    <string name="kgtu_in_social_media">KSTU in social networks</string>
    <string name="eios">EIOS educational environment</string>
    <string name="VKontakte">Vkontakte</string>
    <string name="telegram">Telegram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="institutes">Institutes</string>
    <string name="inst_fish_and_aqua">Рыболовства и аквакультуры</string>
    <string name="inst_agro_and_food">Агроинженерии и пищевых систем</string>
    <string name="inst_dig_tech">Цифровых технологий</string>
    <string name="inst_tech">Морских технологий, энергетики и строительства</string>
    <string name="inst_econom">Отраслевой экономики и управления</string>
    <string name="b_today_is_a_day_off_text">Today is a day off!</string>
    <string name="tv_schedule_choose_group_all_groups">Все группы</string>
    <string name="tv_schedule_choose_group_groups_found">Найденные группы</string>
    <string name="toolbar_tv_fragment_notifications">Уведомления</string>
    <string name="schedule_critical_error_b_reload">Restart</string>
    <string name="CriticalError">Critical Error</string>
    <string name="CriticalErrorScheduleDescription">Данные с сервера некорректно загружают расписание. Пожалуйста, перезайдите в приложение для устранения ошибки.</string>

    <!--Шрифты проекта-->
    <!--<string name="m3_sys_typescale_body_large_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_body_medium_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_body_small_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_display_large_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_display_medium_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_display_small_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_headline_large_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_headline_medium_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_headline_small_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_label_large_font" translatable="false">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_medium_font" translatable="false">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_small_font" translatable="false">sans-serif-medium</string>
    <string name="m3_sys_typescale_title_large_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_title_medium_font" translatable="false">sans-serif</string>
    <string name="m3_sys_typescale_title_small_font" translatable="false">sans-serif-medium</string>-->
</resources>