<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.RegistrationFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_goToAuthorisation"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/registration_b_authorization"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        app:strokeWidth="0dp" />

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_registration_ru" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/registration_tv_registration"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registration_tv_registration_info"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registrationImStudent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/registration_b_im_student"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:icon="@drawable/ic_registration_im_student"
            app:strokeWidth="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_registrationImTeacher"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/registration_b_im_teacher"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:icon="@drawable/ic_registration_im_teacher"
            app:strokeWidth="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_continueRegistration"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/registration_b_continue_registration"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_RegistrationEnterToAppAsGuest"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/registration_b_enterAsGuest"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:strokeWidth="0dp" />

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

</com.google.android.material.circularreveal.CircularRevealLinearLayout>