<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    tools:context=".Fragments.AuthorisationFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_goToRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:strokeWidth="0dp"
        android:text="@string/autorization_b_registration"/>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_ru" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/autorization_et_login"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/autorization_et_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_iDontRememberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/autorization_b_dont_remember_password"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            app:strokeWidth="0dp"
            android:layout_marginTop="16dp"
            app:icon="@drawable/ic_i_dont_remember_password"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_enterToApp"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:text="@string/autorization_b_enter_to_app"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_enterToAppAsGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="0dp"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:text="@string/autorization_enter_as_guest"/>


    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

</com.google.android.material.circularreveal.CircularRevealLinearLayout>