<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:id="@+id/not_done_yet_container"
        style="@style/MaterialAlertDialog.Material3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="202dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/ic_group_not_chosen" />

        <TextView
            android:id="@+id/textView_1"
            style="@style/DisplaySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/md_theme_light_onSurface"
            android:text="@string/group_not_chosen" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_2"
            style="@style/BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/schedule_will_appear"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_selectStudyGroup"
            style="@style/buttonStudyGroupNotSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"

            android:backgroundTint="@color/m3_sys_light_primary"
            app:icon="@drawable/ic_select_a_group_button_plus"
            android:text="@string/choose_group" />
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>